--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,5 +1,5 @@
-#FROM
-#USER
+FROM python:2.7-stretch
+USER root
 # uWSGI:
 RUN pip install uwsgi
 # Copy the base uWSGI ini file to enable default dynamic uwsgi process number
@@ -72,4 +72,4 @@ ARG WORK_DIR=/var/www
 RUN usermod -u 1000 www-data
 WORKDIR ${WORK_DIR}
 CMD [ "uwsgi" ]
-#PORT
+PORT 9000
