--- a/consumers/Dockerfile
+++ b/consumers/Dockerfile
@@ -1,9 +1,11 @@
-FROM python:2.7-stretch
+FROM python:3.7.15-alpine3.17
+
 
 # uWSGI:
 USER root
-RUN /usr/local/bin/python -m pip install --upgrade pip
-RUN pip install uwsgi
+RUN pip install --upgrade pip \
+    pip install --upgrade setuptools \
+    pip install uwsgi
 
 # Copy the base uWSGI ini file to enable default dynamic uwsgi process number
 COPY ./uwsgi.ini /etc/uwsgi/
