--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,11 @@
-FROM python:2.7-stretch
+FROM python:3.7.15-alpine3.17
+
 USER root
 # uWSGI:
-RUN pip install uwsgi
+RUN pip install --upgrade pip \
+    pip install --upgrade setuptools \
+    pip install uwsgi
+
 # Copy the base uWSGI ini file to enable default dynamic uwsgi process number
 COPY ./uwsgi.ini /etc/uwsgi/
 # Which uWSGI .ini file should be used, to make it customizable
